@@ -1,3 +1,8 @@
+2003-07-08  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/placement.c (PlaceWindow):
+	StartsOnPage + SkipMapping overrides PPosition
+
 2003-06-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/virtual.c (do_move_window_to_desk):
